Enhance debug logging for ClassFileManager operations
- Updated debug messages to include detailed information about class files being deleted and backed up.
- Added logging for the registration of generated classes.
- Improved clarity of log output for better traceability during compilation.